# ukrdc-cupid

./: #.env.docker  #Dockerfile  .dockerignore  .env.docker  .env.docker.example  .env.test  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  _Dockerfile.backup  docker-compose.yml  errors.csv  process.py  pyproject.toml  run_checks.sh  tox.ini
#database/: README.md  autogenerated_models_v5.py  init_db.sh
#database/alembic/versions/: 7c7900da4510_v5_upgrade.py
#database/scripts/: schema_converter_migrate.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml
database/: Dockerfile  README.md  alembic.ini  autogenerated_models_v4.py  docker-compose.yml  init_db.sh
database/alembic/: env.py
database/alembic/versions/: 7c7900da4510_v5_dataset_null.py  a1a7539b1a57_initial_commit.py  e70a58394c83_v5_database_upgrade.py
database/scripts/: simulate_data.py  v5_migration.sql
database2/: alembic.ini
database2/v5-migration/: env.py
scripts/: copy_patient_between_dbs.py  create_investigate_schema.py  example_xml_validation.py  fix_workflow_issues.sh  generate_investigations_report.py  load_files_from_ukrdc.py  make_pid_generation_sequence.py  merge_xml_files.py  post_files_from_sftp.py  process.py  process_xml_directory.py  start_api_docker.py  test_nhs_correlations.py  useful_sql.sql
scripts/test_deploy/: .env.test.md  README.MD  build_db.py  create_investigate_schema.py  initialise_db.py  intialize_db.py  migrate_data.py  start_api.py
scripts/test_deploy/sql_scripts/: id_generation_sequences.sql
scripts/useful_sql/: erroneous_unlinked_patients.sql
scripts/xml_examples/: UKRDC.xml  UKRDC_full_v4.xml  UKRDC_full_v5.xml  UKRDC_mistakes.xml  UKRDC_v3.xml  UKRDC_v3_3_0_pathalogical.xml  UKRDC_v4.xml
src/ukrdc_cupid/api/: README.md  __init__.py  main.py
src/ukrdc_cupid/core/: README.md  general.py  utils.py
src/ukrdc_cupid/core/audit/: README.md  domain.py  run_domain_check.py  validate_matches.py
src/ukrdc_cupid/core/inquire/: README.md
src/ukrdc_cupid/core/investigate/: README.md  create_investigation.py  models  models.py  picklists.py  utils.py
src/ukrdc_cupid/core/match/: README.md  identify.py  identify_old.py
src/ukrdc_cupid/core/modify/: README.md  edit_feed.py  id_update.py
src/ukrdc_cupid/core/parse/: README.md  exceptions.py  utils.py  xml_validate.py
src/ukrdc_cupid/core/store/: README.md  delete.py  delete_old.py  exceptions.py  insert.py  insert_old.py  keygen.py  store.py  utils.py
src/ukrdc_cupid/core/store/models/: README.md  child_records.py  longitudinal_records.py  lookup_tables.py  patient.py  relationships.py  structure.py  types.py  ukrdc.py  ukrdc_backup1.py  utils.py
tests/: #test_load_real_patients.py  #test_lookup_tables.py  _test_load_real_patients.py  _test_lookup_tables.py  _ukrdc.py  conftest.py  test_anon.py  test_api.py  test_blackbox_1.py  test_investigate.py  test_load_real_patients.py  test_longitudinal.py  test_lookup_tables.py  test_match.py  test_obs_results.py  test_parse.py  test_patients.py  test_store_general.py  test_store_structure.py  test_store_ukrdc.py
tests/xml_files/: UKRDC_v4_0_0.xml
tests/xml_files/general/: UKRDC_v4_0_0.xml  patient_record.xml
tests/xml_files/store_tests/: test_0.xml  test_1.xml  test_1_anon.xml  test_1a.xml  test_1b.xml  test_2.xml  test_3.xml
ukrdc_xml2sqla/: transform_orm.py  utils.py
ukrdc_xml2sqla/models/: ukrdc.py  ukrdc_identify.py
