[tool.poetry]
authors = [
  "Joel Collins <joel.collins@ukkidney.org>",
  "Phil Main <philip.main@ukkidney.org>" 
]
description = "An application to convert, match, and store RDA XML files"
name = "ukrdc-cupid"
readme = "README.md"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.10"
# Core parse dependencies
lxml = "^5.3.1"
gitpython = "^3.1.41"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
platformdirs = "^3.9.1"
ukrdc-xsdata = "^4.2.0"

# Other dependencies grouped by function
[tool.poetry.group.store]
optional = true

[tool.poetry.group.store.dependencies]
ukrdc-sqla = {git ="http://git@github.com/renalreg/ukrdc-sqla.git", branch = "v5"}
sqlalchemy-utils = "^0.41.1"
psycopg = "^3.2.2"
pytz = "^2025.2"



[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = "^0.111.0"
uvicorn = "^0.30.6"
requests = "^2.31.0"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
gnupg = "^2.3.1"
nhs-number = "^1.3.4"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
ruff = "^0.0.263"
tox = "^4.5.1"
bandit = "^1.7.5"
pytest = "<7.4.3"
psycopg = {extras = ["binary"], version = "^3.2.9"}


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
ignore = [
  "E501", # Line too long (let Black handle this)
]
